--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,21 @@
     text-align: center;
 }
 
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-}
-.logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
+.header {
+    max-width: 100%;
 }
 
-@keyframes logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.header img {
+    width: 100%;
+    border-radius: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-        animation: logo-spin infinite 20s linear;
-    }
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.card {
-    padding: 2em;
-}
-
-.read-the-docs {
-    color: #888;
+.product-grid img {
+    width: 100%;
+    border-radius: 1rem;
 }
